fix the gap between recent posts and search section

--- a/themes/ESGI-theme/src/css/components/_post-sidebar.scss
+++ b/themes/ESGI-theme/src/css/components/_post-sidebar.scss
@@ -13,7 +13,7 @@
 
         // search 
         .search-section {
-            margin-bottom: 50px;
+            margin-bottom: 80px;
 
             h2 {
                 font-size: 1.1rem;
@@ -298,7 +298,7 @@
 
             // search
             .search-section {
-                margin-bottom: 50px;
+                margin-bottom: 80px;
 
                 h2 {
                     font-size: 1.1rem;
